--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/SpaceMono-Regular.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
 h1{
     font-family: 'Space Mono';
     font-weight: 700;
@@ -77,13 +84,15 @@ p{
     text-transform: uppercase;
 }
 
-.menu-overlay li a{
+.menu-overlay, .menu-wp-overlay li a {
     font-family: 'Space Mono';
     font-weight: 400;
     font-size: 44px;
     line-height: 65.16px;
     letter-spacing: 0%;
     text-transform: uppercase;
+    color: white;
+    text-decoration: none;
 }
 
 
@@ -115,8 +124,14 @@ body {
     position: relative;
     padding: 0 7%;
     min-height: 80px;
-    z-index: 100;
+    z-index: 1;
     background-color: white;
+}
+
+.menu{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .menu-wp {
@@ -129,6 +144,85 @@ body {
     color: black;
     text-decoration: none;
 }
+
+/* -------- The Modal -------- */
+
+.myBtn{
+    all: unset;
+    cursor: pointer;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 3; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    margin: 15% auto;
+    border: 4px solid #000000;
+    max-width: 550px;
+    overflow: hidden;
+}
+
+.wpcf7-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wpcf7-form p{
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    width: 263px;
+}
+
+.wpcf7-form input {
+    width: 263px;
+    height: 40px;
+    border-radius: 8px;
+    border-width: 1px;
+    border-color: #B8BBC2;
+}
+
+.wpcf7-form textarea{
+    width: 263px;
+    border-radius: 8px;
+    border-width: 1px;
+    border-color: #B8BBC2;
+}
+
+input[type="submit" i]{
+    border-width: 1px;
+    width: 269px;
+    border-radius: 2px;
+    border-style: hidden;
+    font-family: 'Space-Mono';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 17.77px;
+    background-color: #D8D8D8;
+}
+
+.contact-title{
+    width: 150%;
+    margin: 10px 0;
+}
+
+/* -------- / -------- */
 
 .logo{
     width: 216px;
@@ -167,10 +261,11 @@ body {
 
 .menu-overlay {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: fixed;
-    z-index: 10;
+    z-index: 2;
     width: 100vw;
     height: 100vh;
     background-color: red;
@@ -186,17 +281,13 @@ body {
     text-align: center;
     list-style-type: none;
     padding-left: 0;
+    margin: 0;
 }
 
 .menu-wp-overlay li {
     opacity: 0;
     transform: translateY(10px) scale(0.95);
     transition: opacity 0.3s ease-out 0.2s, transform 0.3s ease-out 0.2s;
-}
-
-.menu-wp-overlay li a{
-    color: white;
-    text-decoration: none;
 }
 
 .menu-overlay.active {
