--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,10 @@ body {
     color: black;
 }
 
+body.no-scroll {
+    overflow: hidden;
+  }
+
 section{
     margin: 0 100px;
 }
@@ -120,10 +124,28 @@ section{
     padding: 0;
 }
 
+.hero-wrapper {
+    position: relative;
+}
+
+
 .hero-image{
     width: 100vw;
-    object-fit: fill;
+    max-height: 597px;
+    display: block;
+    object-fit: cover;
+    z-index: 1;
+    position: relative;
 }
+
+.titre-header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90vw;
+    z-index: 2;
+  }
 
 .nav-bar{
     display: flex;
@@ -162,27 +184,41 @@ section{
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 3; /* Sit on top */
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+    position: fixed;
+    z-index: 3;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal.show {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
 }
 
 .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    margin: 15% auto;
     border: 4px solid #000000;
     max-width: 550px;
+    min-width: 450px;
     overflow: hidden;
+    padding: 20px;
 }
 
 .wpcf7-form {
@@ -274,7 +310,7 @@ input[type="submit" i]{
     align-items: center;
     justify-content: center;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     width: 100vw;
     height: 100vh;
     background-color: red;
@@ -326,12 +362,19 @@ input[type="submit" i]{
     transition: transform 0.3s;
 }
 
+/*==================== Template content grid =================*/
+
+
 /*======================== Template Photo ======================*/
 
 .main-photo-container{
+    margin-top: 50px;
+}
+
+.upper-blocs{
     display: flex;
-    gap: 20px;
-    border-bottom: #000000 solid 2px;
+    align-items: end;
+    gap: 30px;
 }
 
 .photo-info-container{
@@ -339,11 +382,11 @@ input[type="submit" i]{
     flex-direction: column;
     justify-content: end;
     width: 50%;
+    border-bottom: 2px solid black;
 }
 
 .photo-title{
-    max-width: 300px;
-    line-height: 80px;
+    line-height: 90px;
     margin-bottom: 10px;
 }
 
@@ -357,10 +400,32 @@ input[type="submit" i]{
     color: #000000;
 }
 
+.photo-container{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+}
+
+.photo-container img{
+    object-fit: contain;
+    max-width: 100%;
+    height: auto;
+}
+
+.interactions-container{
+    height: 118px;
+    border-bottom: 2px solid black;
+    display: flex;
+    gap: 30px;
+}
+
 .photo-info-btn-container{
-    border-top: #000000 solid 2px;
+    width: 50%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 40px 0;
 }
 
@@ -373,22 +438,8 @@ input[type="submit" i]{
 
 }
 
-.photo-container{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.photo-container img{
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
-}
-
 .photo-preview-container{
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -396,13 +447,24 @@ input[type="submit" i]{
 }
 
 .photo-preview{
-    height: 80px;
-    width: 70px;
+    height: 70px;
+    width: 80px;
+}
+
+.photo-preview img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .arrow-btns{
-    text-align: center;
-    width: 70px;
+    display: flex;
+    width: 80px;
+    justify-content: space-around;
+}
+
+.arrow-btn:visited {
+    color: inherit;
 }
 
 .arrow-btn{
@@ -413,27 +475,252 @@ input[type="submit" i]{
     padding: 40px 0;
 }
 
-.other-pics, .home-pics {
+.photo-grid {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.home-pics{
+    text-align: center;
+}
+
+.filters{
+    display: flex;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    gap: 20px;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
+#categories, #formats, #sort{
+    min-width: 260px;
+    min-height: 42px !important;
+}
+
+/* ========== STYLE CUSTOM POUR SELECT2 ========== */
+
+/* Conteneur principal */
+
+
+.select2-container--default .select2-selection--single {
+    font-family: 'Poppins', monospace;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-align: left;
+    padding: 6px 10px;
+    line-height: 18px;
+    height: 42px !important;
+    border-radius: 8px !important;
+}
+
+.select2-container--default .select2-dropdown {
+    border: none !important;
+    border-radius: 8px !important;
+    overflow: hidden;
+}
+
+.select2-container--default.select2-container--open .select2-selection--single {
+    border: 2px solid #215AFF;
+}
+
+.select2-container--default .select2-results__option {
+    height: 50px;
+    line-height: 50px;
+    font-size: 16px;
+    padding: 0 12px;
+}
+
+.select2-results__option[aria-disabled="true"] {
+    color: white !important;
+}
+
+/* Option survolée */
+.select2-results__option--highlighted {
+    background-color: #E00000 !important;
+    color: white !important;
+}
+
+/* Option sélectionnée */
+.select2-results__option[aria-selected="true"] {
+    background-color: #E00000 !important;
+    color: white !important;
+}
+
+
+
+
+#load-more-btn{
+    all: initial;
+    width: 272px;
+    height: 40px;
+    padding: 8px 15px;
+    text-align: center;
+    background-color: #D8D8D8;
+    border-color: #D8D8D8;
+    border-radius: 2px;
+    margin: 30px;
+}
+
+#load-more-btn:hover {
+    cursor: pointer;
+    background-color: #000000;
+    color: white;
+}
+
 .grid-item {
-    width: 50%;/* Ajustez la largeur selon vos besoins */
     padding: 10px;
-    object-fit: contain;
     box-sizing: border-box;
-    height: 500px;
     overflow: hidden;
 }
 
 .grid-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-
+    width: 564px;
+    height: 495px;
+    object-fit: cover;
 }
+
+.overlay{
+    width: 564px;
+    height: 495px;
+    position: absolute;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 0.1s ease-in-out;
+}
+
+.overlay img{
+    width: auto;
+    height: auto;
+}
+
+.grid-item:hover .overlay {
+    opacity: 1;
+}
+
+.eyelogo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 46px !important;
+    height: auto !important;
+    height: auto;
+}
+
+.overlay-reference {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    font-size: 14px;
+    margin: 0;
+}
+
+.overlay-category {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    font-size: 14px;
+    margin: 0;
+}
+
+.fullscreenlogo {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 34px!important;
+    height: auto !important;
+    cursor: pointer;
+}
+
+/*======================== Lightbox ======================*/
+
+.lightbox-overlay {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+    transform: scale(0.98);
+    pointer-events: none;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    display: flex;
+}
+
+.lightbox-overlay.show {
+    opacity: 1;
+    transform: scale(1);
+    pointer-events: auto;
+}
+
+.lightbox-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90vw;
+    height: 90vh;
+    position: relative;
+}
+
+.lightbox-nav {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 20px;
+}
+
+.lightbox-image-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-height: 100%;
+}
+
+#lightbox-image {
+    max-width: 100%;
+    max-height: 80vh;
+    object-fit: contain;
+}
+
+.lightbox-infos {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    width: 100%;
+    padding: 10px 20px;
+    font-size: 14px;
+}
+
+#lightbox-reference,
+#lightbox-category {
+    margin: 0;
+}
+
+.close-lightbox {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 10000;
+}
+
 /*======================== Footer ======================*/
+
 
 .footer-menu{
     border-top: 2px solid black;
@@ -453,11 +740,25 @@ input[type="submit" i]{
     color: black;
 }
 
+
 /*======================== Responsive ======================*/
+
+@media (max-width: 991px){
+    .photo-title{
+        font-size: 75px;
+    }
+}
 
 @media (max-width: 768px){
 
 
+    section{
+        margin: 0px;
+    }
+
+    .upper-blocs{
+        padding: 0 80px;
+    }
     .menu{
         display: none;
     }
@@ -469,11 +770,8 @@ input[type="submit" i]{
         width: 35px;
         height: 30px;
     }
-    h1{
-        font-size: 27.59px;
-        line-height: 40.86px;      
-    }
-    
+
+
     h2{
         font-size: 46px;
         line-height: 48px;     
@@ -485,4 +783,56 @@ input[type="submit" i]{
         gap: 20px;
     }
 
+    .grid-item img {
+        width: 317px;
+        height: 278px;
+    }
+
+    .overlay{
+        width: 317px;
+        height: 278px;
+    }
+
+    .upper-blocs {
+        flex-direction: column-reverse;
+        align-items: start;
+    }
+
+    .photo-container {
+        width: auto;
+    }
+    .photo-container img {
+        width: 90vw;
+        align-items: center;
+        text-align: center;
+    }
+
+    .photo-info-container {
+        border-bottom: none;
+        width: auto !important;
+    }
+
+    .photo-info-btn-container {
+        flex-direction: column;
+        width: 100%;
+        padding: 20px 40px;
+    }
+
+    .photo-info-btn-container p{
+        width: 272px;
+        margin-top: 0px;
+    }
+    
+    .photo-preview-container {
+        display: none;
+    }
+
+    .interactions-container {
+        border-top: 2px solid black;
+        height: auto;
+    }
+
+    .other-pics-container h3{
+        text-align: center;
+    }
 }
